--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:4qxdHOuZ5ybR@ep-empty-union-a5t8ttm6.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+#Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Z2xvd2luZy1yYXB0b3ItMjkuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_5frXsvs3jePIDluySN0hNj0UzEDHVq3YnBH6V6B84m
